@@ -36,7 +36,9 @@
 //#define GFX_USE_OS_RAWRTOS                           FALSE
 //#define GFX_USE_OS_ARDUINO                           FALSE
 //#define GFX_USE_OS_KEIL                              FALSE
+//#define GFX_USE_OS_RTX5                              FALSE
 //#define GFX_USE_OS_CMSIS                             FALSE
+//#define GFX_USE_OS_CMSIS2                            FALSE
 //#define GFX_USE_OS_RAW32                             FALSE
 //#define GFX_USE_OS_NIOS                              FALSE
 //#define GFX_USE_OS_QT                                FALSE
